Initialize ozone/drm correctly in video tests

In https://chromium-review.googlesource.com/861749, I changed
ozone/drm intialization semantics to make ozone/drm more flexible
about setup from WS or GpuProcessHost. I missed updating one call site
in media. Added it here.

BUG=808962

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I22982b2d3019638083fb21858881a29681ee4559
Reviewed-on: https://chromium-review.googlesource.com/912405
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Commit-Queue: Robert Kroeger <rjkroege@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535883}
Former-commit-id: 7a0f354be912e8aa9f0e6eef2d55905416f32922